# smipc

./: .gitignore  .gitlab-ci.yml  .vimspector.json  Dockerfile  LICENSE  MANIFEST.in  README.md  black.sh  build-docker.sh  build-pyinstaller.sh  ci.sh  clean.sh  flake8.sh  isort.cfg  isort.sh  main.py  mypy.sh  project.dic  pytest.ini  python  requirements.cuda11.txt  requirements.cuda12.txt  requirements.deploy.txt  requirements.main.txt  requirements.test.txt  requirements.txt  setup.cfg  uninstall.sh
.github/workflows/: docker-deploy.yml  python-deploy.yml  python-test.yml
.run/: client.run.xml  server.run.xml
.vim/: coc-settings.json
bt_python/: __main__.py  arguments.py  entrypoint.py  variables.py
bt_python/apps/: __init__.py  app_base.py  default.py
bt_python/logging/: logging.py
smipc/: arguments.py  client.py  connector.py  entrypoint.py  host.py  manager.py  pool.py  protocol.py  publisher.py  server.py  subscriber.py  variables.py
smipc/apps/: client.py  server.py
smipc/cuda/: compatibility.py  handler.py  memory.py  provider.py  runtime.py  utils.py
smipc/memory/: queue.py  validator.py
smipc/pipe/: client.py  duplex.py  reader.py  server.py  temp.py  wait.py  writer.py
smipc/protocols/: base.py  cpu.py  header.py  limits.py  sm.py
smipc/pubsub/: publisher.py  subscriber.py
smipc/server/: aio.py  base.py
smipc/sm/: queue.py  written.py
smipc/threading/: thread.py
tester/: test_connector.py  test_entrypoint.py  test_protocol.py  test_pubsub.py
tester/cuda/: test_alignment.py  test_compatibility.py  test_cupy.py  test_handler.py  (+4 more)
(+30 files in other folders)
