[metadata]
name = bt-python
description = Boilterplate Template Python Project
version = attr: bt_python.__version__
author = yourname
author_email = yourmail
maintainer = yourname
maintainer_email = yourmail
url = https://github.com/yourid/bt-python
project_urls =
    GitHub: issues = https://github.com/yourid/bt-python/issues
    GitHub: repo = https://github.com/yourid/bt-python
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT License
keywords =
classifiers =
    Development Status :: 4 - Beta
    Framework :: AsyncIO
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.9
    Topic :: Software Development
    Topic :: Utilities
    License :: OSI Approved :: MIT License

[options]
python_requires = >=3.9
packages = find:
include_package_data = True

[options.packages.find]
exclude =
    tester*

[options.exclude_package_data]
bt_python.assets = .gitignore
bt_python.www = .gitignore

[options.entry_points]
console_scripts =
    bt_python = bt_python.entrypoint:main
